--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,38 +1,4 @@
-﻿@* @{
-    ViewData["Title"] = "Home";
-}
-
-<div class="vh-100 d-flex justify-content-center align-items-center"
-     style="background-image:url('https://images.unsplash.com/photo-1762627318644-311c23762d1a?q=80&w=1469&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D'); background-size:inherit; background-position:center;">
-
-    
-    <div class="p-5 rounded-4 text-white"
-         style="background:linear-gradient(to bottom right, #111, #333); width:80%; max-width:900px;">
-
-        <h3 class="text-center mb-4">Welcome</h3>
-
-        
-        <table class="table table-borderless text-white" style="background-color: transparent;">
-            <tbody>
-                <tr class="border-bottom border-white">
-                    <td class="border-end border-white">Value 1</td>
-                    <td class="text-white">Value 2</td>
-                </tr>
-                <tr class="border-bottom border-white">
-                    <td class="border-end border-white">Value 3</td>
-                    <td class="text-white">Value 4</td>
-                </tr>
-                <tr>
-                    <td class="border-end border-white">Value 5</td>
-                    <td class="text-white">Value 6</td>
-                </tr>
-            </tbody>
-        </table>
-
-    </div>
-</div> *@
-
-@{
+﻿@{
     ViewData["Title"] = "Home";
 }
 
@@ -40,12 +6,8 @@
     
     body {
         overflow: hidden;
-        margin: 0;
-        padding: 0;
-        height: 100vh;
         background: url('https://images.unsplash.com/photo-1762627318644-311c23762d1a?q=80&w=1469&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D') no-repeat center center fixed;
-        background-size: cover;
-        position: relative;
+        background-size: cover; 
     }
         
 
@@ -72,13 +34,13 @@
                     <td>@@1passForLogin</td>
                 </tr>
                 <tr>
-                    <td>Academic Manager</td>
-                    <td>manager@email.com</td>
+                    <td>Programme Coordinator</td>
+                    <td>coordinator@email.com</td>
                     <td>@@1passForLogin</td>
                 </tr>
                 <tr>
-                    <td>Project Coordinator</td>
-                    <td>coordinator@email.com</td>
+                    <td>Academic Manager</td>
+                    <td>manager@email.com</td>
                     <td>@@1passForLogin</td>
                 </tr>
                 <tr>
