--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -34,6 +34,11 @@
                     <td>@@1passForLogin</td>
                 </tr>
                 <tr>
+                    <td>Lecturer</td>
+                    <td>kyle@email.com</td>
+                    <td>@@1passForLogin</td>
+                </tr>
+                <tr>
                     <td>Programme Coordinator</td>
                     <td>coordinator@email.com</td>
                     <td>@@1passForLogin</td>
@@ -48,6 +53,7 @@
                     <td>hr@email.com</td>
                     <td>@@1passForLogin</td>
                 </tr>
+
             </tbody>
         </table>
 
